# renderer

./: .clang-format  README.md  meson.build
include/string/: application.cpp  application.hpp  renderer.hpp  string_engine.hpp  window.hpp
include/string/component/: physics_components.hpp
include/string/core/: assert.hpp  component.hpp  coordinator.hpp  debug.hpp  entity.hpp  entrypoint.hpp  event.hpp  logger.hpp  nocopy.hpp  platform_detection.hpp  system.hpp  version.hpp
include/string/ecs/: component.hpp  component_manager.hpp  coordinator.hpp  entity.hpp  entity_manager.hpp  event.hpp  event_manager.hpp  scene.hpp  system.hpp  system_manager.hpp
include/string/ecs/component/: physics_components.hpp  render_components.hpp
include/string/ecs/system/: old_render_system.hpp  physics_system.hpp  render_system.hpp  window_system.hpp
include/string/graphics/: renderer.hpp
include/string/linux/: linux_window.hpp
include/string/math/: Mat44.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
include/string/system/: old_render_system.hpp  physics_system.hpp  render_system.hpp  window_system.hpp
include/string/vulkan/: buffer.hpp  device.hpp  device_selector.hpp  instance.cpp  instance.hpp  renderer.hpp  vulkan_debugger.hpp  vulkan_instance.hpp  vulkan_physical_device.hpp  vulkan_renderer.hpp  vulkan_window.hpp
include/string/vulkan/bootstrap/: VkBootstrapDispatch.h
shaders/: 2d_shader.vert  3d_shader.frag  3d_shader.vert  hello_triangle.frag  hello_triangle.vert  meson.build
src/: VkBootstrap.cpp  application.cpp  main.cpp  renderer.cpp  sandbox_app.cpp  window.cpp
